--- a/govt-services.html
+++ b/govt-services.html
@@ -6,14 +6,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrap">
-    <div style="display:flex;align-items:center;gap:12px;margin-bottom:12px">
-      <a class="btn" href="index.html">⬅ Home</a>
+  <header class="top">
+    <div class="wrap">
+      <div class="brand"><div class="logo-mark">G</div><div><h1>GraphiDesk</h1><div class="sub">Government Services</div></div></div>
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="banking.html">Banking</a>
+        <button id="themeToggle" class="theme-toggle">🌙 <span id="thtxt">Dark</span></button>
+      </nav>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <div class="page-head">
       <h2>Government / Public Services</h2>
+      <a class="btn" href="index.html">⬅ Back</a>
     </div>
 
     <div class="card">
-      <table class="table">
+      <table class="table" aria-label="Government services table">
         <thead><tr><th>Service</th><th>Govt Fee</th><th>Our Fee</th><th>Total</th></tr></thead>
         <tbody>
           <tr><td>Aadhaar Update / Print</td><td>₹0</td><td>₹30</td><td>₹30</td></tr>
@@ -30,13 +41,33 @@
           <tr><td>Labour Card Registration</td><td>₹0</td><td>₹100</td><td>₹100</td></tr>
         </tbody>
       </table>
-
-      <p class="small" style="margin-top:10px">Tip: Edit this file to update fees. Replace values in the <code>&lt;td&gt;</code> cells and re-upload.</p>
+      <p class="small" style="margin-top:10px">Tip: Open this file and edit the <code>&lt;td&gt;</code> fee values. Re-upload to update site.</p>
     </div>
 
-    <div class="footer">© <span id="y1"></span> GraphiDesk</div>
-  </div>
+    <div class="footer">© <span id="year-govt"></span> GraphiDesk</div>
+  </main>
 
-<script>document.getElementById('y1').textContent=new Date().getFullYear();</script>
+<script>
+(function(){
+  const root=document.documentElement;
+  let saved=localStorage.getItem('gdc-theme');
+  if(saved==='dark') root.classList.add('theme-dark'); else if(saved==='light') root.classList.remove('theme-dark');
+  else if(window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) root.classList.add('theme-dark');
+  // make toggle work on this page
+  const toggle=document.getElementById('themeToggle');
+  const txt=document.getElementById('thtxt');
+  function applyTheme(name){
+    if(name==='dark'){ root.classList.add('theme-dark'); txt.textContent='Dark'; toggle.textContent='🌙 Dark'; }
+    else { root.classList.remove('theme-dark'); txt.textContent='Light'; toggle.textContent='☀️ Light'; }
+  }
+  if(toggle){
+    toggle.addEventListener('click', function(){
+      const isDark=root.classList.contains('theme-dark'); const next=isDark?'light':'dark';
+      localStorage.setItem('gdc-theme', next); applyTheme(next);
+    });
+  }
+  document.getElementById('year-govt').textContent=new Date().getFullYear();
+})();
+</script>
 </body>
 </html>
