--- a/utility.html
+++ b/utility.html
@@ -4,11 +4,10 @@
   <title>Utility Bills - GraphiDesk</title>
   <link rel="stylesheet" href="style.css"></head>
 <body>
-  <div class="wrap">
-    <div style="display:flex;align-items:center;gap:12px;margin-bottom:12px">
-      <a class="btn" href="index.html">⬅ Home</a>
-      <h2>Utility & Daily Use Services</h2>
-    </div>
+  <header class="top"><div class="wrap"><div class="brand"><div class="logo-mark">G</div><div><h1>GraphiDesk</h1><div class="sub">Utility Bills</div></div></div><nav class="main-nav"><a href="index.html">Home</a><a href="ticketing.html">Ticketing</a><button id="themeToggle" class="theme-toggle">🌙 <span id="thtxt">Dark</span></button></nav></div></header>
+
+  <main class="wrap">
+    <div class="page-head"><h2>Utility & Daily Use Services</h2><a class="btn" href="index.html">⬅ Back</a></div>
 
     <div class="card">
       <table class="table">
@@ -22,12 +21,14 @@
           <tr><td>FASTag Recharge</td><td>₹10</td><td></td></tr>
         </tbody>
       </table>
-
-      <p class="small" style="margin-top:8px">Tip: For slab logic (e.g., fee varies by amount), mention slab on this page or in-store.</p>
+      <p class="small" style="margin-top:8px">Tip: For slab logic (fee varies by amount), mention slabs on this page or print a rate card in-store.</p>
     </div>
 
-    <div class="footer">© <span id="y5"></span> GraphiDesk</div>
-  </div>
-<script>document.getElementById('y5').textContent=new Date().getFullYear();</script>
+    <div class="footer">© <span id="year-util"></span> GraphiDesk</div>
+  </main>
+
+<script>
+(function(){ const root=document.documentElement; let saved=localStorage.getItem('gdc-theme'); if(saved==='dark') root.classList.add('theme-dark'); else if(saved==='light') root.classList.remove('theme-dark'); else if(window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) root.classList.add('theme-dark'); const toggle=document.getElementById('themeToggle'); const txt=document.getElementById('thtxt'); if(toggle){ toggle.addEventListener('click', function(){ const isDark=root.classList.contains('theme-dark'); const next=isDark?'light':'dark'; localStorage.setItem('gdc-theme', next); if(next==='dark'){ root.classList.add('theme-dark'); txt.textContent='Dark'; toggle.textContent='🌙 Dark'; } else { root.classList.remove('theme-dark'); txt.textContent='Light'; toggle.textContent='☀️ Light'; } }); } document.getElementById('year-util').textContent=new Date().getFullYear(); })();
+</script>
 </body>
 </html>
