--- a/business.html
+++ b/business.html
@@ -4,11 +4,10 @@
   <title>Business Registration - GraphiDesk</title>
   <link rel="stylesheet" href="style.css"></head>
 <body>
-  <div class="wrap">
-    <div style="display:flex;align-items:center;gap:12px;margin-bottom:12px">
-      <a class="btn" href="index.html">⬅ Home</a>
-      <h2>Business Registration Services</h2>
-    </div>
+  <header class="top"><div class="wrap"><div class="brand"><div class="logo-mark">G</div><div><h1>GraphiDesk</h1><div class="sub">Business Registration</div></div></div><nav class="main-nav"><a href="index.html">Home</a><a href="courier.html">Courier</a><button id="themeToggle" class="theme-toggle">🌙 <span id="thtxt">Dark</span></button></nav></div></header>
+
+  <main class="wrap">
+    <div class="page-head"><h2>Business Registration Services</h2><a class="btn" href="index.html">⬅ Back</a></div>
 
     <div class="card">
       <table class="table">
@@ -24,8 +23,11 @@
       <p class="small" style="margin-top:8px">Note: Govt fees change; update the 'Govt Fee' column as needed.</p>
     </div>
 
-    <div class="footer">© <span id="y6"></span> GraphiDesk</div>
-  </div>
-<script>document.getElementById('y6').textContent=new Date().getFullYear();</script>
+    <div class="footer">© <span id="year-biz"></span> GraphiDesk</div>
+  </main>
+
+<script>
+(function(){ const root=document.documentElement; let saved=localStorage.getItem('gdc-theme'); if(saved==='dark') root.classList.add('theme-dark'); else if(saved==='light') root.classList.remove('theme-dark'); else if(window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) root.classList.add('theme-dark'); const toggle=document.getElementById('themeToggle'); const txt=document.getElementById('thtxt'); if(toggle){ toggle.addEventListener('click', function(){ const isDark=root.classList.contains('theme-dark'); const next=isDark?'light':'dark'; localStorage.setItem('gdc-theme', next); if(next==='dark'){ root.classList.add('theme-dark'); txt.textContent='Dark'; toggle.textContent='🌙 Dark'; } else { root.classList.remove('theme-dark'); txt.textContent='Light'; toggle.textContent='☀️ Light'; } }); } document.getElementById('year-biz').textContent=new Date().getFullYear(); })();
+</script>
 </body>
 </html>
